# packing_tutorial

./: README.md  pyproject.toml  test.py
src/example_package_aswin/: example.py
src/example_package_aswin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/symbols_testing_aswin/: example.py
src/symbols_testing_aswin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.py
