[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_aswin"
version = "0.0.1"
authors = [
  { name="Aswin Venkat", email="aswinvenk8@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aswinvenk/packing_tutorial"
"Bug Tracker" = "https://github.com/aswinvenk/packing_tutorial/issues"